--- a/src/app/admin/social-media-leads/social-media-leads.component.html
+++ b/src/app/admin/social-media-leads/social-media-leads.component.html
@@ -33,7 +33,6 @@
   </div>
 </div> -->
 
-
 <div>
   <div class="p-1 m-2 fixed-card">
     <div class="d-flex justify-content-between">
@@ -77,27 +76,30 @@
         'CreatedOn'
       ]"
       styleClass="p-datatable-customers "
-      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Leads">
+      currentPageReportTemplate="Showing {first} to {last} of {totalRecords} Leads"
+    >
       <ng-template pTemplate="header" let-columns>
         <tr>
-            <th>Lead ID</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th>Phone</th>
-            <th>City</th>
-            <th>Platform</th>
-            <th>Created Time</th>
+          <th>Lead ID</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Phone</th>
+          <th>Company</th>
+          <th>City</th>
+          <th>Platform</th>
+          <th>Created Time</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-team>
         <tr>
-            <td>{{ team.id }}</td>
-            <td>{{ team.Name }}</td>
-            <td>{{ team.Email }}</td>
-            <td>{{ team.PhoneNumber }}</td>
-            <td>{{ team.City }}</td>
-            <td>{{ team.Platform }}</td>
-            <td>{{ team.CreatedOn | date}}</td>
+          <td>{{ team.id }}</td>
+          <td>{{ team.Name }}</td>
+          <td>{{ team.Email }}</td>
+          <td>{{ team.PhoneNumber }}</td>
+          <td>{{ team.Company }}</td>
+          <td>{{ team.City }}</td>
+          <td>{{ team.Platform }}</td>
+          <td>{{ team.CreatedOn | date }}</td>
         </tr>
       </ng-template>
     </p-table>
