--- a/src/app/admin/accounts/accounts.component.html
+++ b/src/app/admin/accounts/accounts.component.html
@@ -12,6 +12,13 @@
           <span class="back-btn-text">Accounts </span>
         </b>
       </div>
+      <button
+        pButton
+        label="Export"
+        icon="pi pi-file"
+        class="p-button-info mb-2"
+        (click)="exportAccountsToCSV()"
+      ></button>
     </div>
   </div>
   <div class="m-2">
@@ -20,11 +27,10 @@
       [value]="accounts"
       [lazy]="true"
       (onLazyLoad)="loadAccounts($event)"
-      (onRowSelect)="viewAccount($event)"
       selectionMode="single"
       dataKey="id"
       [showCurrentPageReport]="true"
-      [rowsPerPageOptions]="[10, 25, 50]"
+      [rowsPerPageOptions]="[10, 25, 50, 100]"
       [paginator]="true"
       [rows]="10"
       [totalRecords]="accountsCount"
@@ -89,7 +95,6 @@
       </ng-template>
       <ng-template pTemplate="body" let-team>
         <tr
-          [pSelectableRow]="team"
           class="text-capitalize"
           [ngClass]="{ 'disabled-row': team.disabled }"
         >
