key up value added

--- a/src/app/admin/accounts/profile/profile.component.html
+++ b/src/app/admin/accounts/profile/profile.component.html
@@ -273,6 +273,7 @@
       placeholder="Enter remarks"
       class="form-control flex-grow-1"
       rows="3"
+      (keyup.enter)="addRemarks()"
       style="min-width: 0; resize: none"
     ></textarea>
 
