--- a/src/app/admin/cam-reports/cam-reports.component.html
+++ b/src/app/admin/cam-reports/cam-reports.component.html
@@ -14,6 +14,15 @@
     <!-- <button pButton type="button" class="p-button-primary" (click)="goBack()">
       <i class="pi pi-plus me-2"></i>Create New Report
     </button> -->
+    <div class="col-md-3 text-end">
+        <button
+          pButton
+          label="Export"
+          icon="pi pi-file"
+          class="p-button-info"
+          (click)="exportBSAReportsToCSV()"
+        ></button>
+      </div>
   </div>
 </div>
 
