--- a/src/app/admin/cibil-reports/cibil-reports.component.html
+++ b/src/app/admin/cibil-reports/cibil-reports.component.html
@@ -12,6 +12,15 @@
           <span class="back-btn-text">Accounts </span>
         </b>
       </div>
+      <div class="col-md-3 text-end">
+        <button
+          pButton
+          label="Export"
+          icon="pi pi-file"
+          class="p-button-info"
+          (click)="exportCibilReportsToCSV()"
+        ></button>
+      </div>
     </div>
   </div>
   <div class="m-2">
